# structo-py

./: Dockerfile  Makefile  pyproject.toml
api/v1/monitoring/: __init__.py
app/schemas/extras/: current_user.py
core/: config.py  server.py
core/database/: transactional.py
core/fastapi/middlewares/: __init__.py  authentication.py  sqlalchemy.py
core/repository/: base.py
core/security/: access_control.py  jwt.py  password.py
core/utils/: datetime.py
